# overdueprogress.org

./: .env.example  .gitignore  .sops.yaml  Cargo.toml  README.md  RUST_LOG.txt  competition.html  devshell.nix  flake.nix  formatter.nix  index.html
.sqlx/: query-09032e718f0627c16943ef48547a3c34ef4a67a36fc85cd4fb9f0684d47a6ef4.json  query-093032d7d7e8de89a0f90dd04b15fa38bb9c611a740e0b781e594d6f584fb38f.json  query-2f574e8ab9877aa4f901dd5df5b504a7dc42a935fb589e1ebe4988506420e3e7.json  query-348f528f00db623c5e8b56065fc9b7cb63f0d9762837f09ea022c1e9492c8867.json  query-38461061971e33f58ee85d82610549bbc14032355a792431b1bd7e24e7762abb.json  query-3907c30a9c405b606371014db072e5113d2acdeed9e7e633582fc8ddc6ecfb96.json  query-3f63dc76cd098b99e068c2c48b82381a61c3d5baeff214772ac0eccb131050b4.json  query-476bd7aa057c61d7a964b37b371db6e9c51693640b1d1db476d102403cf8e6c3.json  query-5879ca78de68ce9ee26ee9db2731a32cadefc030c1de6db0782e59e1379e89ad.json  query-5a0f2fe8b327d82af2f68f8b2694b0c1ba58e0ec513bbb7caa864fe6188f8628.json  query-6d4522f4dfead6d48739d3ff5fc66e92bbb8a8a3465ffb7431401220b359c105.json  query-75a830e2dd0b6af609eb348e975f0ed4ddad3ff3def22960ae665219234bb0f0.json  query-876a90679f1b0ece1acdca3e95f50110b3fd9ae6cc9ba6125915b02003312306.json  query-91b720d53a9f8afc2dd6e60a9a6ade32c823209f09a579cfbc32d4b6f7b3364d.json  query-9a24f1947876480574320159bb38126614cf635ead604678f6da0ad3d571ab9e.json  query-9f548886c99ec9446a9e6de9cf1b6cb5ed0b6ed9525050f4458b5616fe6006b6.json  query-a08ed60f72106377e7e4ba4be8df54de0fc3c757e928462691bcc99f50de86e9.json  query-ac2165d5dfc608e42320f15482453afe7e304d21dbb12ff41aa4e4034638c233.json  query-b7f1b53133584c9f4320af4aee91c65899490b783c902d51fc0ae439f04c4ade.json  query-cf32e5856371eb68b6710f44040fecca317b4069162beda3b69126b21086c6a2.json  (+12 more)
src/: auth.rs  main.rs  (+10 more)
(+50 files in other folders)
