[package]
name = "overdueprogress"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/frectonz/overdueprogress.org"

[profile.release]
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
color-eyre = "0.6.5"
minijinja = { version = "2.19.0", features = ["loader"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["reqwest-blocking-client", "reqwest-rustls-webpki-roots", "http-proto", "trace"] }
opentelemetry_sdk = "0.31.0"
parenv = "0.1.10"
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "form", "rustls", "http2", "charset"] }
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
webauthn-rs = "0.5.4"

[dev-dependencies]
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
tower = "0.5.3"
wiremock = "0.6.5"
